# energymeter-bytebeam

./: .gitignore  LICENSE  README.md
bytebeam-esp-idf-sdk/components/bytebeam_esp_sdk/include/: bytebeam_sdk.h
bytebeam-esp-idf-sdk/examples/temp_humid/: sdkconfig
bytebeam-esp-idf-sdk/examples/toggle_led/main/: app_main.c
bytebeam_provisioning/: partitions_example.csv  sdkconfig
bytebeam_provisioning/config_data/: device_config.json
bytebeam_provisioning/config_data_old/: device_config.json
bytebeam_provisioning/main/: CMakeLists.txt  app_main.c
modbus-app/: CMakeLists.txt  partitions_example.csv  sdkconfig  sdkconfig.esp32c3.4mb
modbus-app/components/bytebeam_esp_sdk/: bytebeam_esp_hal.c  bytebeam_sdk.c
modbus-app/components/bytebeam_esp_sdk/include/: bytebeam_esp_hal.h  bytebeam_sdk.h
modbus-app/components/esp-modbus/: CMakeLists.txt  Kconfig
modbus-app/components/esp-modbus/common/: esp_modbus_slave.c  esp_modbus_slave_serial.c
modbus-app/components/esp-modbus/common/include/: mb_sdkconfig.h  mbcontroller.h
modbus-app/components/esp-modbus/freemodbus/common/: esp_modbus_master.c
modbus-app/components/esp-modbus/freemodbus/modbus/: mb_m.c
modbus-app/components/esp-modbus/freemodbus/port/: portevent_m.c  portserial.c  portserial_m.c  porttimer.c
modbus-app/components/esp-modbus/modbus/include/: mbconfig.h
modbus-app/components/esp-modbus/port/: portevent.c  portserial.c  portserial_m.c  porttimer.c  porttimer_m.c
modbus-app/components/modbus_common/include/: modbus_params.h
modbus-app/main/: CMakeLists.txt  main.c  master.c
(+8 files in other folders)
